<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/paredbuena"
        android:orientation="vertical"
        tools:context=".Mercader">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbarEjemplo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#CC000000"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            app:title="Mercader"
            app:titleTextColor="@color/white" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="300dp"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/todos"
            android:src="@drawable/mercader" />

        <TextView
            android:id="@+id/art"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:background="#CC000000"
            android:gravity="center_horizontal"
            android:textColor="@color/white"
            android:visibility="gone" />

        <LinearLayout
            android:id="@+id/botones"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:backgroundTint="#80000000"
                android:text="@string/comerciar"
                android:textColor="#FFFFFF"
                android:textStyle="bold"
                tools:ignore="TextContrastCheck,TouchTargetSizeCheck" />

            <Button
                android:id="@+id/button2"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:backgroundTint="#80000000"
                android:text="@string/continuar"
                android:textColor="#FFFFFF"
                android:textStyle="bold"
                tools:ignore="TextContrastCheck,TouchTargetSizeCheck" />

            <Button
                android:id="@+id/compra"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:backgroundTint="#80000000"
                android:text="@string/compra"
                android:textColor="#FFFFFF"
                android:textStyle="bold"
                android:visibility="gone"
                tools:ignore="TextContrastCheck" />

            <Button
                android:id="@+id/venta"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:backgroundTint="#80000000"
                android:text="@string/venta"
                android:textColor="#FFFFFF"
                android:textStyle="bold"
                android:visibility="gone"
                tools:ignore="TextContrastCheck" />

            <Button
                android:id="@+id/cancelar"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:backgroundTint="#80000000"
                android:text="@string/cancelar"
                android:textColor="#FFFFFF"
                android:textStyle="bold"
                android:visibility="gone"
                tools:ignore="TextContrastCheck" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/Uds"
            android:layout_width="176dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/buttonRestar"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginEnd="16dp"
                android:layout_weight="0"
                android:backgroundTint="#80000000"
                android:contentDescription="@string/restar"
                android:scaleType="centerCrop"
                android:src="@drawable/restar"
                android:text="@string/sumar"
                android:textColor="#FFFFFF"
                android:visibility="invisible"
                tools:ignore="TextContrastCheck" />

            <TextView
                android:id="@+id/udsText"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginEnd="16dp"
                android:layout_weight="0"
                android:background="#80000000"
                android:gravity="center"
                android:paddingStart="5dp"
                android:text="@string/uno"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="italic"
                android:visibility="invisible"
                tools:ignore="RtlSymmetry,TextContrastCheck" />

            <ImageButton
                android:id="@+id/buttonSumar"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_weight="0"
                android:backgroundTint="#80000000"
                android:contentDescription="@string/todo"
                android:scaleType="centerCrop"
                android:src="@drawable/sumar"
                android:text="@string/resta"
                android:textColor="#FFFFFF"
                android:visibility="invisible"
                tools:ignore="TextContrastCheck" />
        </LinearLayout>

        <Button
            android:id="@+id/buy"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="192dp"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:layout_margin="16dp"
            android:backgroundTint="#80000000"
            android:text="Aceptar y  Comprar"
            android:textColor="#FFFFFF"
            android:textStyle="bold"
            android:visibility="invisible"
            tools:ignore="TextContrastCheck,TouchTargetSizeCheck" />


    </LinearLayout>
</ScrollView>