<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/paredbuena"
    android:orientation="vertical"
    tools:context=".InfoPersonaje">

    <include layout="@layout/toolbar_ejemplo" />

    <ImageView
        android:id="@+id/fotoP"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:contentDescription="@string/personaje"
        android:padding="10dp"
        app:srcCompat="@drawable/ic_launcher_background"
        tools:ignore="ImageContrastCheck" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="5dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView18"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="#80000000"
            android:paddingLeft="5dp"
            android:text="@string/nombre"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="italic"></TextView>

        <TextView
            android:id="@+id/textView19"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="#80000000"
            android:paddingLeft="5dp"
            android:text="TextView"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"></TextView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView20"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="#80000000"
            android:paddingLeft="5dp"
            android:text="@string/raza"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="italic"></TextView>

        <TextView
            android:id="@+id/textView21"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="#80000000"
            android:paddingLeft="5dp"
            android:text="TextView"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"></TextView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView22"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="#80000000"
            android:paddingLeft="5dp"
            android:text="@string/clase"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="italic"></TextView>

        <TextView
            android:id="@+id/textView23"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="#80000000"
            android:paddingLeft="5dp"
            android:text="TextView"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"></TextView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView24"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="#80000000"
            android:paddingLeft="5dp"
            android:text="@string/estado_vital"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="italic"></TextView>

        <TextView
            android:id="@+id/textView25"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="#80000000"
            android:paddingLeft="5dp"
            android:text="TextView"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"></TextView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView26"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="#80000000"
            android:paddingLeft="5dp"
            android:text="@string/nivel"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="italic"></TextView>

        <TextView
            android:id="@+id/textView27"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="#80000000"
            android:paddingLeft="5dp"
            android:text="TextView"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"></TextView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView28"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="#80000000"
            android:paddingLeft="5dp"
            android:text="@string/salud"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="italic"></TextView>

        <TextView
            android:id="@+id/textView29"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="#80000000"
            android:paddingLeft="5dp"
            android:text="TextView"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"></TextView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView30"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="#80000000"
            android:paddingLeft="5dp"
            android:text="@string/ataque"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="italic"></TextView>

        <TextView
            android:id="@+id/textView31"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="#80000000"
            android:paddingLeft="5dp"
            android:text="TextView"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"></TextView>
    </LinearLayout>
</LinearLayout>