<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/paredbuena"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarEjemplo"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="#CC000000"
        android:theme="@style/PuntosBlancos"
        app:popupTheme="@style/Theme.AppCompat.DayNight.DarkActionBar">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="16dp"
            android:gravity="center_vertical"
            android:text=""
            android:textColor="@color/white"
            android:textSize="28sp" />

        <ImageButton
            android:id="@+id/imageButton2"
            android:layout_width="48dp"
            android:layout_height="match_parent"
            android:layout_gravity="end|center_vertical"
            android:background="#00FFFFFF"
            android:contentDescription="Música"
            android:padding="8dp"
            android:scaleType="centerInside"
            android:src="@drawable/herramienta_de_audio_con_altavoz"
            tools:ignore="TouchTargetSizeCheck"
            app:tint="@color/white" />

    </androidx.appcompat.widget.Toolbar>


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_gravity="center_horizontal"
        android:layout_margin="16dp"
        android:contentDescription="@string/personaje"
        app:srcCompat="@drawable/ic_launcher_background"
        tools:ignore="ImageContrastCheck" />


    <EditText
        android:id="@+id/editTextText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:autofillHints=""
        android:background="#CC000000"
        android:ems="10"
        android:hint="@string/nombre"
        android:inputType="text"
        android:minHeight="48dp"
        android:paddingLeft="10dp"
        android:textColor="@color/white"
        android:textColorHint="#A6FFFFFF" />

    <LinearLayout
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="5dp"
        android:background="#80000000"
        android:orientation="vertical">

        <TextView
            android:id="@+id/udsText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/raza"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/spinnerRaza"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#FFFFFF"
            android:entries="@array/raza"
            android:foregroundTint="#FFFFFF"
            android:minHeight="48dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="5dp"
        android:background="#80000000"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/clase"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/spinnerClase"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#FFFFFF"
            android:entries="@array/clase"
            android:minHeight="48dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="5dp"
        android:background="#80000000"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/estado_vital"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/spinnerEstadoVital"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#FFFFFF"
            android:entries="@array/estadoVital"
            android:minHeight="48dp"
            android:textColor="#FFFFFF" />
    </LinearLayout>

    <Button
        android:id="@+id/button"
        android:layout_width="250dp"
        android:layout_height="48dp"
        android:layout_gravity="center"
        android:backgroundTint="#80000000"
        android:text="Crear"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        tools:ignore="TextContrastCheck" />

</LinearLayout>